# fhe_pir_ads

./: README.md  pir_pb2.py  pir_pb2_grpc.py  pyproject.toml
client/: main.py
client/pir/: client.py
fhe_pir/: fhe_pb2.py  fhe_pb2.pyi  fhe_pb2_grpc.py
fhe_pir/client/: main.py
fhe_pir/client/pir/: client.py
fhe_pir/server/: main.py  service.py
fhe_pir/server/pir/: server.py
fhe_pir_ads/client/: main.py
fhe_pir_ads/server/: main.py  service.py
matrix_pir/: itpir_pb2.py  itpir_pb2.pyi  itpir_pb2_grpc.py
matrix_pir/ad_catalog/: index_tree.py
matrix_pir/client/: main.py
matrix_pir/client/pir/: client.py
matrix_pir/server/: main.py  service.py
matrix_pir/server/pir/: server.py
protos/: fhe.proto  itpir.proto
server/: main.py  service.py
